--- a/index.html
+++ b/index.html
@@ -27,15 +27,13 @@
 
     <label for="vogelSelect">Kies een vogelsoort:</label>
     <select id="vogelSelect">
-      <option value="merel">Merel</option>
-      <option value="roodborst">Roodborst</option>
-      <option value="koolmees">Koolmees</option>
-      <option value="mus">Mus</option>
+      
     </select>
 
     <div class="counter">
       Aantal keer gespot: <span id="count">0</span>
       <button id="plusBtn">+</button>
     </div>
+    <script src="./script/script.js"></script>
   </body>
 </html>
